--- a/Places/description.html
+++ b/Places/description.html
@@ -8,8 +8,9 @@
         p {
             font-family: sans-serif;
             color: white;
-            text-shadow: 1px 1px 2px grey;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
             text-align:center;
+            padding-top: 100px;
         }
         </style>
     </head>
